[gd_scene load_steps=6 format=3 uid="uid://drq37yonkk6jx"]

[ext_resource type="Texture2D" uid="uid://dityd5jfxu3y5" path="res://Assets/target-297821_1280.png" id="1_3y2ns"]
[ext_resource type="Script" path="res://Game Objects/target.gd" id="2_gv6ph"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cfdu3"]
radius = 10.136

[sub_resource type="CircleShape2D" id="CircleShape2D_pwpcp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l6i2w"]
radius = 131.015

[node name="Target" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_3y2ns")
script = ExtResource("2_gv6ph")

[node name="BullseyeArea" type="Area2D" parent="."]
z_index = 2
scale = Vector2(0.251272, 0.24937)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BullseyeArea"]
z_index = 3
scale = Vector2(14.8946, 13.9926)
shape = SubResource("CircleShape2D_cfdu3")

[node name="GoodshotArea" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodshotArea"]
scale = Vector2(7.48829, 8.02192)
shape = SubResource("CircleShape2D_pwpcp")
debug_color = Color(0.192157, 0.643137, 0, 0.419608)

[node name="FairshotArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FairshotArea"]
scale = Vector2(0.997995, 1.02319)
shape = SubResource("CircleShape2D_l6i2w")
debug_color = Color(0.693816, 0.000314968, 0.681204, 0.42)

[connection signal="input_event" from="BullseyeArea" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="BullseyeArea" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BullseyeArea" to="." method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="GoodshotArea" to="." method="_on_goodshot_area_input_event"]
[connection signal="input_event" from="FairshotArea" to="." method="_on_fairshot_area_input_event"]
